[package]
name = "test-websocket"
version = "0.1.0"
authors = ["ksr30 <krishna.singh9926@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
websocket-lite = {version = "0.5.0" , git = "https://github.com/1tgr/rust-websocket-lite"}
futures = "0.3"
base64 = "0.13"
bytes = "0.6"
native-tls = { version = "0.2", optional = true }
openssl = { version = "0.10", optional = true }
rand = "0.7"
tokio-util = {version= "0.6.1", features=["codec"]}
tokio-openssl = { version = "0.5", optional = true }
tokio-native-tls = { version = "0.2", optional = true }
tokio = {version="1.0.1", features=["net", "io-util"]}
url = "2"
websocket-codec = { version="0.5",git = "https://github.com/1tgr/rust-websocket-lite" }
serde_json = "1.0"
async-std = { version = "1.6.4", features = ["attributes"] }

[dev-dependencies]
structopt = "0.3"
tokio = { version = "1.0.1", features=["macros", "time", "io-std", "rt-multi-thread"] }

[features]
default = ["ssl-native-tls"]
nightly = []
ssl-native-tls = ["native-tls", "tokio-native-tls"]
ssl-openssl = ["openssl", "tokio-openssl"]